syntax = "proto3";

option csharp_namespace = "TP_GSC_BackEnd.Protos";

import "google/protobuf/timestamp.proto";

service LoanGrpcGateway{
	rpc initLoan(loanCreateRequest) returns (Response);
	rpc closeLoan(LoanId) returns (Response);
}


message loanCreateRequest{
	int32 personId=1;
	int32 thingId=2;
	google.protobuf.Timestamp AgreedReturnDate=3;
}

message LoanId{
	int32 id=1;
}

message Response{
	string message=1;
}
